# central_de_projetos

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  alembic.ini  conftest.py  create_admin.py  main.py  pyproject.toml  pytest.ini  requirements.txt
migrations/: env.py
migrations/versions/: 51c48f55f776_.py  530a2ad311a7_add_constraint_in_fiscal_name_unique.py  841b92031e6b_criação_da_tabela_de_refresh_tokens.py  de24638c4d6b_name_colmun_for_user.py  fbcc8618f279_.py
src/auth/: auth_factory.py  auth_factory_test.py
src/auth/config/: auth_algoritm.py  auth_algoritm_test.py  auth_secret_key.py  auth_secret_key_test.py
src/auth/encrypt/: encrypt.py  encrypt_test.py
src/data/interface/: i_bairro_repository.py  i_empresa_repository.py  i_fiscal_repository.py  i_history_project.py  i_history_project_repository.py  i_project_bairro_repository.py  i_project_document_repository.py  i_project_empresa_repository.py  i_project_fiscal_repository.py  i_project_repository.py  i_project_type_repository.py  i_raven_project_document_repository.py  i_refresh_token_repository.py  i_status_repository.py  i_types_repository.py  i_user_project.py  i_user_project_repository.py  i_user_repository.py
src/data/use_cases/: associate_vereador_with_a_project.py  create_bairro.py  create_empresa.py  create_fiscal.py  create_history_project.py  create_project.py  create_project_bairro.py  create_project_type.py  (+84 more)
src/errors/: error_handle.py
src/main/: app.py
src/security/: hashed_password_factory_test.py  hashedpassword_factory.py  hashedpassword_factory_chk.py
(+658 files in other folders)
