[project]
name = "central-de-projetos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.15.2",
    "bcrypt==4.3.0",
    "cryptography==44.0.2",
    "fastapi==0.115.12",
    "mysql-connector-python==9.2.0",
    "pyjwt==2.10.1",
    "pylint==3.3.6",
    "pymongo==4.12.0",
    "pymysql==1.1.1",
    "pytest==8.3.5",
    "python-dotenv==1.1.0",
    "ravendb==7.0.0",
    "sqlalchemy==2.0.40",
    "uvicorn==0.34.2",
]
